--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,11 @@
 .main-div{
-    height: 100vh;
+    height: 85vh;
     width: 100vw;
     background-color: antiquewhite;
-    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+}
+.separator{
+    border: 1px dashed gray;
+    margin: 10px 0;
 }
