--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,12 +1,11 @@
 .header-nav{
-    width: 100vw;
-    height: 15vh;
-
     display: flex;
     align-items: center;
     overflow: hidden;
+    margin-bottom: 20px;
 
 }
 .logo-image{
-    width: 15%;
+    width: 120px;
+    padding-left: 10px;
 }
