--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,7 @@
     background-size: 1px 8px;
     background-repeat: repeat-y;
 }
-@media (min-width: 320px) and (max-width: 768px){
+@media(max-width: 768px){
 
     .main-div{
         flex-direction: column;
