--- a/src/styles/canvas.css
+++ b/src/styles/canvas.css
@@ -7,7 +7,9 @@
 }
 .activity-container p{
     margin-top: 0;
+    width: 90%;
     font-weight: 600;
+    text-align: center;
 }
 
 .avatar-container{
